--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 # ==============================================================
 spring.datasource.url = jdbc:mysql://localhost:3306/sparklmsdb?useSSL=true
 spring.datasource.username = root
-spring.datasource.password = passw0rd
+spring.datasource.password = Jose2402
 
 # ==============================================================
 # = Keep the connection alive if idle for a long time (needed in production)
